# TrainTickets

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  init_db.sql
client/: CMakeLists.txt  apiclient.cpp  apiclient.h  bookingwidget.cpp  bookingwidget.h  carriagewidget.cpp  carriagewidget.h  config.h  loginwidget.cpp  loginwidget.h  main.cpp  mainmenuwidget.cpp  mainmenuwidget.h  mainwindow.cpp  mainwindow.h  myticketswidget.cpp  myticketswidget.h  profilewidget.cpp  profilewidget.h  registration.cpp  registration.h  registration.ui  seatselectionwidget.cpp  seatselectionwidget.h  trainlistwidget.cpp  trainlistwidget.h  verification.cpp  verification.h  verification.ui
server/: CMakeLists.txt  apiserver.cpp  apiserver.h  config.h  database.cpp  database.h  emailconfig.h  main.cpp  pdfgenerator.cpp  pdfgenerator.h
